Changes in Version 1.2.0.3

  o Added full support for Openstreetmap (OSM) tiles
    All functions should work properly with both Google and OSM tiles.


Changes in Version 1.2.0.2

  o Added function ColorMap, which plots levels of a Variable in a Colour-Coded Map

Changes in Version 1.2.0

  o As of version: 1.2.0, RgoogleMaps only offers support for png files, no more jpeg. 
    The maintenance of the jpg ReadImages library has become too tedious, so I removed all dependencies.

Changes in Version 1.3.0

  o bug fix: NEWMAP had no effect in GetMap function, fixed now
  o bug fix: spatial polygons with holes were not displaced properly, fixed now
  o bug fix: boundary condition problems at lon= +/- 180, fixed now
  o bug fix: dataframe markers argument to GetMap did not work properly, fixed now
  o new feature: added full support for Microsoft bing map tiles

  Changes in Version 1.4.1

  o new feature: added full support for OpenStreetMap maps
  o new feature: added functions to fetch individual map tiles and stitch them together. This has the side effect of making these maps available offline