@@ -4,7 +4,7 @@ Title: Overlays on Static Maps
 Version: 1.4.1
 Date: 2016-09-06
 Depends: R (>= 2.10)
-Imports: graphics, stats, utils, png, RJSONIO
+Imports: graphics, stats, utils, png
 Suggests: PBSmapping, maptools, sp, loa, RColorBrewer, leaflet
 Author: Markus Loecher 
 Maintainer: Markus Loecher <markus.loecher@gmail.com>
